force-app/main/default/objects/Payment_order_line__c/fields/Is_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Is_Subscription__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Subscription</label>
    <type>Checkbox</type>
</CustomField>