force-app/main/default/objects/Payment_order_line__c/fields/Payments__c.field-meta.xml
<CustomField>
    <fullName>Payments__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payments</label>
    <referenceTo>Payments__c</referenceTo>
    <relationshipLabel>Payment order lines</relationshipLabel>
    <relationshipName>Payment_order_lines</relationshipName>
    <type>Lookup</type>
</CustomField>