force-app/main/default/objects/Payment_order_line__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Payment order lines</relationshipLabel>
    <relationshipName>Payment_order_lines</relationshipName>
    <type>Lookup</type>
</CustomField>