force-app/main/default/objects/Payment_order_line__c/fields/Provision_base__c.field-meta.xml
<CustomField>
    <fullName>Provision_base__c</fullName>
    <label>Provision base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>